--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.9.1",
+    "axios": "^1.6.2",
     "chart.js": "^2.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
